css/gonzalez.css
body {
    padding-top: 30px;
    padding-bottom: 30px;
}

h1 {
  padding-top: 20px;
}

p {
    /*padding: 40px 15px;*/
    padding-top: 5px;
    padding-bottom: 5px;
}

img.hm-no-resize {
  max-height: 115px;

  max-width: 218px;
}

.image-caption {
  padding-top: 15px;
}

.image-title {
  padding-top: 20px;
  padding-bottom: 20px;
  text-align: center;
}

.page-content {
  padding-left: 40px;
  padding-right: 40px;
}

.sponsor {
	max-width: 100px;
	max-height: 100px;
  vertical-align: center;
  margin-right: auto;
  margin-left: auto;
}

.sponsor-grid {
  margin-top: 10px;
  margin-bottom: 20px;
  vertical-align: center
}
.sponsor-grid [class*="col"] {
  text-align: center;
  min-height: 100px;
  line-height: 100px;
}

.vertical-center {
  vertical-align: center;
}

img.lab-member {
  width: 150px;
  height: auto;
  float:left;
  padding-right: 20px;
}

img.pub-thumbnail {
  height: 122px;
  float: left;
  padding-right: 10px;
}

ul.publication-list li {
  margin-top: 10px;
  margin-bottom: 10px;
}

@media screen and (max-width: 992px) {
  body {
    padding-top: 85px;
  }
}

@media screen and (max-width: 768px) {
  body {
    padding-top: 20px;
    padding-right: 10px;
    padding-left: 10px;
  }

  .page-content {
    padding: 10px;
    padding-top: 20px;
  }  

  .sponsor {
    padding: 10px;
  }

  .lab-address {
    text-align: center;
  
  }

  img.lab-member {
  float: none;
  display: block;
  padding-bottom: 10px;
  /*margin-left: auto;
  margin-right: auto;*/

}

}

